# FPGA-DAW

./: .gitignore  .gitmodules  FIR_Accelerator_tb.sv  dsp_core_remarks.md  generate sin.py  guh.guh  guh_memory_controller  numbers.md  ram_info.md  readme.md  sd_card_remarks.md  sin.txt  stuff_to_do.md
FPGA-DAW/: .gitignore  FPGA-DAW.xpr  Pipelined_Mixer_Tb_behav.wcfg
FPGA-DAW/FPGA-DAW.cache/wt/: synthesis.wdf  webtalk_pa.xml
FPGA-DAW/FPGA-DAW.runs/.jobs/: vrs_config_1.xml
FPGA-DAW/FPGA-DAW.runs/design_1_auto_pc_0_synth_1/: .vivado.begin.rst  design_1_auto_pc_0.tcl  design_1_auto_pc_0.vds  design_1_auto_pc_0_utilization_synth.pb  design_1_auto_pc_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  rundef.js  runme.sh  vivado.jou  vivado.pb
FPGA-DAW/FPGA-DAW.runs/design_1_axi_gpio_0_0_synth_1/: .vivado.begin.rst  design_1_axi_gpio_0_0.dcp  design_1_axi_gpio_0_0.tcl  design_1_axi_gpio_0_0.vds  design_1_axi_gpio_0_0_utilization_synth.pb  design_1_axi_gpio_0_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  rundef.js  runme.sh  vivado.jou  vivado.pb
FPGA-DAW/FPGA-DAW.runs/design_1_processing_system7_0_0_synth_1/: .vivado.begin.rst  design_1_processing_system7_0_0.tcl  design_1_processing_system7_0_0.vds  design_1_processing_system7_0_0_utilization_synth.pb  design_1_processing_system7_0_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  rundef.js  runme.sh  vivado.jou  vivado.pb
FPGA-DAW/FPGA-DAW.runs/design_1_rst_ps7_0_50M_0_synth_1/: .vivado.begin.rst  design_1_rst_ps7_0_50M_0.dcp  design_1_rst_ps7_0_50M_0.tcl  design_1_rst_ps7_0_50M_0.vds  design_1_rst_ps7_0_50M_0_utilization_synth.pb  design_1_rst_ps7_0_50M_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
FPGA-DAW/FPGA-DAW.runs/impl_1/: design_1_wrapper.tcl  gen_run.xml  project.wdf  rundef.js  runme.sh
dac demo 1/: dac demo 1.xpr
dac demo 1/dac demo 1.cache/wt/: webtalk_pa.xml
dac demo 1/dac demo 1.runs/.jobs/: vrs_config_1.xml
doc/: DFT.md  DSP_constr.md  FIR_Acceleration.md  psram_details.md  stuff_to_do.md  summary.md
dsp/: digital_signal_processor.sv  ring_fifo.sv
dsp 5_31_23/: digital_signal_processor_tb.sv  read_rom_tb.sv
fpga_daw_untracked/: fpga_daw_untracked.xpr  processor_core_tb_behav.wcfg  psram_controller_tb_behav.wcfg
mmc_tb/: makefile  ocsdc.c
other_rtl/: FIR_Accelerator.sv
other_rtl/block-rom-gen/: brom.py
pico/: CMakeLists.txt  audio.py  picoFlashTool_WinPS.ps1  send.py
pico/src/: config.h  daw.cpp  player.cpp  player.h  spi_link.cpp  spi_link.h  stdio_mem.cpp  stdio_mem.h
pico/src/daw/: player.cpp  player.h  project.h
pico/src/fatfs/: diskio.cpp  fat_example.cpp  ffconf.h
pico/src/memory/: mem.cpp  mem.h  queue.cpp  queue.h
pico/src/mmc/: mmc.cpp  mmc.h  ocsdc.cpp  sdc_example.cpp  sdc_example.h  spisdc.cpp
python/: audio.py  compile.py  daw.py  filter.strom  gui.py  instructions.txt  main.py  ram.py  reference.c  regression.py  sine.py  test.py  wrapper.py  wrapper.txt
python/dsp_core_simulator/: audio_render.py  compile.py  dsp_sim_HOW_TO_USE.txt  entire.py  filter.strom  generate_instructions.py  graphic.py  instructions.txt  instructions2.txt  pico_sim.py  user_input.txt  wrapper.py  wrapper_version_2.py
rtl/: .gitignore  FIR_Accelerator_tb.sv  SPI_Slave.v  brom.v  makefile  psram_bridge.sv  psram_bridge_tb.sv  psram_controller.sv  sdModel.v  sd_fake.v  spi_fpga_mux.sv  spi_link_sm.sv  spi_loopback.do  thing.sv  top.v  top_tb.do  top_tb_do.do  verilog_tb.sv
rtl/block-rom-gen/: brom.py  brom2.py
rtl/sim/: makefile  test.do  top_tb.do  top_tb_do.do
rtl/spi/: spi_loopback_test.sv  spi_master.vhd  spi_slave.vhd
rtl/tb/: dsp_macro.sv  psram_controller_tb.sv  psram_simulator_tb.sv  spi_fifo_tb.sv  spi_loopback_test.sv  top_tb.sv  verilog_tb.sv
sd-controller/: makefile  verilog_tb.v  verilog_tb.vcd  verilog_tb.vpp  wave.gtkw
vivado-sim/: .gitignore  vivado-sim.xpr
(+171 files in other folders)
